[package]
name = "num-literal-traits"
version = "0.1.2"
edition = "2024"
authors = ["Sascha Klick <rustdev@sklick.de>"]
license = "MIT"
description = "Convert numerical literals from strings to numbers."
homepage = "https://github.com/saschaklick/num_literal_traits"
repository = "https://github.com/saschaklick/num_literal_traits"
readme = "README.md"
keywords = ["parsing", "number", "literal", "argument"]
categories = ["parser-implementations", "parsing"]

[lib]

[dependencies]
num-traits = "0.2.19"
